manifests/platform-identity/kratos-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kratos-selfservice-ui
  namespace: ory-system
spec:
  selector:
    app: kratos-selfservice-ui
  ports:
    - port: 3000
      targetPort: 3000
