manifests/platform-identity/kratos-ui/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kratos-ui-netpol
  namespace: hub-platform-identity
spec:
  podSelector:
    matchLabels:
      app: kratos-selfservice-ui-node
  policyTypes:
  - Ingress
  - Egress
  ingress:
  # Allow from Ingress for UI
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - protocol: TCP
      port: 3000
  egress:
  # Allow to Kratos within ory-system
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ory-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: kratos
    ports:
    - protocol: TCP
      port: 4433
  # Allow DNS
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
